<resources>
    <string name="app_name">UniPlanner</string>
    <string name="title_activity_navigation_test">NavigationTestActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Nome Utente</string>
    <string name="nav_header_subtitle">Media: </string>
    <string name="nav_header_badge_number">Matricola: </string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="add_button">Aggiungi</string>
    <string name="modify_button">Modifica</string>

    <!-- strings for menu -->
    <string name="profile">Home</string>
    <string name="schedule">Orario</string>
    <string name="exams">Prossimi Esami</string>
    <string name="votes">Libretto</string>
    <string name="timer">Timer</string>
    <string name="subjects">Le Mie Materie</string>
    <string name="settings">Impostazioni</string>

    <!-- strings for intro fragment-->
    <string name="logo_description">App Logo</string>
    <string name="user_name">Nome</string>
    <string name="user_surname">Cognome</string>
    <string name="badge_number">Matricola</string>
    <string name="university">Università</string>
    <string name="degree_course">Corso di Studi</string>
    <string name="credits">Crediti da acquisire</string>
    <string name="start_button">Inizia</string>

    <!-- strings for home fragment-->
    <string name="content_description_homepage">Homepage Introduction</string>
    <string name="content_description_icon">Icona</string>
    <string name="home_fragment_name">Home</string>
    <string name="average_grade">Media attuale</string>
    <string name="passed_exams">Esami sostenuti</string>
    <string name="expected_degree_vote">Proiezione voto di laurea</string>
    <string name="acquired_credits">Crediti acquisiti</string>
    <string name="next_exam">Prossimo esame</string>
    <string name="no_exams">Nessun esame in programma</string>

    <!-- strings for Booklet fragment-->
    <string name="booklet_fragment_name">Libretto</string>

    <!-- strings for FutureExams fragment-->
    <string name="future_exams_fragment_name">Prossimi Esami</string>
    <string name="new_future_exam_fragment_name">Nuovo Esame</string>
    <string name="new_future_exam_modify_fragment_name">Modifica Esame</string>
    <string name="future_exams_title">Inserisci i dati relativi al nuovo esame che dovrai sostenere</string>
    <string name="exam_location">Aula dell\'esame</string>
    <string name="data">Data:</string>
    <string name="crediti">Crediti:</string>
    <string name="materia">Materia</string>

    <!-- strings for PassedExam fragment-->
    <string name="passed_exam_title">Inserisci i dati relativi al nuovo esame che vuoi aggiungere al tuo libretto</string>
    <string name="new_exam_fragment_name">Nuovo Esame</string>
    <string name="new_exam_modify_fragment_name">Modifica Esame</string>
    <string name="exam_name">Seleziona una materia</string>
    <string name="exam_cfu">CFU</string>
    <string name="exam_date">Data dell\'esame</string>
    <string name="exam_vote">Voto</string>

    <!-- strings for NewLesson fragment-->
    <string name="new_lesson_fragment_name">Nuova Lezione</string>
    <string name="new_lesson_modify_fragment_name">Modifica Lezione</string>
    <string name="new_lesson_title">Inserisci una nuova lezione da aggiungere all\'orario</string>
    <string name="lesson_location">Aula della lezione</string>
    <string name="start_hour">Ora inizio</string>
    <string name="end_hour">Ora fine</string>

    <!-- strings for Subjects fragment-->
    <string name="subjects_fragment_name">Le mie materie</string>

    <!-- strings for New Subject fragment-->
    <string name="new_subject_fragment_name">Nuova Materia</string>
    <string name="new_subject_modify_fragment_name">Modifica Materia</string>
    <string name="new_subject_title">Inserisci i dati relativi al nuovo insegnamento che vuoi aggiungere</string>
    <string name="subject_name">Nome della materia</string>
    <string name="prof_name">Nome del professore</string>
    <string name="choose_color">Scegli un colore</string>

    <!-- strings for TimeTable fragment -->
    <string name="timetable_fragment_name">Orario settimanale</string>
    <string name="docente">Docente</string>
    <string name="aula">Aula</string>

    <!-- strings timer_fragment -->
    <string name="timer_fragment_name">Timer</string>
    <string name="timer_countdown">25:00</string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="reset">Reset</string>

    <!--strings Settings fragment -->
    <string name="settings_fragment_name">Impostazioni</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_logo">App Logo</string>
    <string name="title_activity_tabbed">TabbedActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_tabb">TabbActivity</string>
    <string name="tab_text_1">Lun</string>
    <string name="tab_text_2">Mar</string>
    <string name="tab_text_3">Mer</string>
    <string name="tab_text_4">Gio</string>
    <string name="tab_text_5">Ven</string>
    <string name="tab_text_6">Sab</string>

</resources>
