<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_menu_profile"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_schedule"
            android:icon="@drawable/ic_menu_schedule"
            android:title="@string/schedule" />

        <item
            android:id="@+id/nav_exams"
            android:icon="@drawable/ic_menu_exams"
            android:title="@string/exams" />

        <item
            android:id="@+id/nav_votes"
            android:icon="@drawable/ic_menu_schedule"
            android:title="@string/votes"/>

        <item
            android:id="@+id/nav_subjects"
            android:icon="@drawable/ic_menu_exams"
            android:title="@string/subjects" />

        <item
            android:id="@+id/nav_timer"
            android:icon="@drawable/ic_menu_timer"
            android:title="@string/timer" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/settings" />

    </group>

</menu>
