<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:fontFamily="cursive"
        android:text="UniPlanner"
        android:textSize="35dp"
        android:textStyle="bold|italic" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="120dp"
        android:layout_height="150dp"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:contentDescription="@string/logo_description"
        android:src="@mipmap/ic_uni_logo_round"
        tools:layout_editor_absoluteX="154dp"
        tools:layout_editor_absoluteY="45dp" />

    <EditText
        android:id="@+id/nomeText"
        android:layout_width="240dp"
        android:layout_height="40dp"
        android:layout_alignStart="@+id/matricolaText"
        android:layout_below="@+id/logo"
        android:layout_marginTop="28dp"
        android:background="@drawable/rounded_edittext"
        android:drawablePadding="5dp"
        android:drawableStart="@drawable/ic_action_name"
        android:drawableTint="@color/lightgray"
        android:ems="10"
        android:hint="@string/user_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/matricolaText"
        android:layout_width="240dp"
        android:layout_height="40dp"
        android:layout_alignStart="@+id/corsoText"
        android:layout_below="@+id/nomeText"
        android:layout_marginTop="25dp"
        android:background="@drawable/rounded_edittext"
        android:drawablePadding="5dp"
        android:drawableStart="@drawable/ic_action_badge_number"
        android:drawableTint="@color/lightgray"
        android:ems="10"
        android:hint="@string/badge_number"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/corsoText"
        android:layout_width="240dp"
        android:layout_height="40dp"
        android:layout_alignStart="@+id/cfuText"
        android:layout_below="@+id/matricolaText"
        android:layout_marginTop="23dp"
        android:background="@drawable/rounded_edittext"
        android:drawablePadding="5dp"
        android:drawableStart="@drawable/ic_action_degree_course"
        android:drawableTint="@color/lightgray"
        android:ems="10"
        android:hint="@string/degree_course"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/cfuText"
        android:layout_width="240dp"
        android:layout_height="40dp"
        android:layout_below="@+id/corsoText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:background="@drawable/rounded_edittext"
        android:drawablePadding="5dp"
        android:drawableStart="@drawable/ic_action_credits"
        android:drawableTint="@color/lightgray"
        android:ems="10"
        android:hint="@string/credits"
        android:inputType="number" />

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_below="@+id/cfuText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:clickable="true"
        app:cardBackgroundColor="@color/colorPrimaryDark"
        app:cardCornerRadius="25dp"
        app:cardElevation="10dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/start_button"
            android:textColor="#fff"
            android:textSize="18sp"
            android:textStyle="bold" />
    </android.support.v7.widget.CardView>


</RelativeLayout>