<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <RelativeLayout
        android:id="@+id/new_subject_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="11dp"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/new_subject_title"
            android:textSize="15sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/subject_name"
            android:layout_width="240dp"
            android:layout_height="40dp"
            android:layout_alignStart="@+id/prof_name"
            android:layout_below="@+id/textView10"
            android:layout_marginTop="17dp"
            android:background="@drawable/rounded_edittext"
            android:drawablePadding="5dp"
            android:drawableStart="@drawable/ic_action_badge_number"
            android:elevation="10dp"
            android:ems="10"
            android:hint="@string/subject_name"
            android:inputType="textCapWords" />

        <EditText
            android:id="@+id/prof_name"
            android:layout_width="240dp"
            android:layout_height="40dp"
            android:layout_below="@+id/subject_name"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:background="@drawable/rounded_edittext"
            android:drawablePadding="5dp"
            android:drawableStart="@drawable/ic_action_name"
            android:elevation="10dp"
            android:ems="10"
            android:hint="@string/prof_name"
            android:inputType="textCapWords|textPersonName" />

        <EditText
            android:id="@+id/exam_cfu"
            android:layout_width="240dp"
            android:layout_height="40dp"
            android:layout_below="@+id/prof_name"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:background="@drawable/rounded_edittext"
            android:drawablePadding="5dp"
            android:drawableStart="@drawable/ic_action_degree_course"
            android:elevation="10dp"
            android:ems="10"
            android:hint="@string/exam_cfu"
            android:inputType="number" />

        <RelativeLayout
            android:id="@+id/relative_layout"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/exam_cfu"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp">

            <android.support.v7.widget.CardView
                android:id="@+id/color_picker_button"
                android:layout_width="180dp"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="5dp"
                app:cardElevation="5dp">

                <TextView
                    android:id="@+id/buttonContent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/choose_color"
                    android:textColor="@color/darkgray"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </android.support.v7.widget.CardView>

            <ImageView
                android:id="@+id/chosen_color"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:background="@color/colorPrimaryDark" />
        </RelativeLayout>

        <android.support.v7.widget.CardView
            android:id="@+id/addNewSubject"
            android:layout_width="280dp"
            android:layout_height="50dp"
            android:layout_below="@+id/relative_layout"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="25dp"
            app:cardBackgroundColor="@color/colorPrimaryDark"
            app:cardCornerRadius="25dp"
            app:cardElevation="10dp">

            <TextView
                android:id="@+id/addNewSubjectText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/add_button"
                android:textColor="#fff"
                android:textSize="18sp"
                android:textStyle="bold" />
        </android.support.v7.widget.CardView>
    </RelativeLayout>
</ScrollView>