<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:layout_width="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background">

        <TextView
            android:id="@+id/new_passed_exam"
            android:layout_width="wrap_content"
            android:padding="20dp"
            android:layout_height="wrap_content"
            android:text="@string/passed_exam_title"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:textStyle="bold"
            android:textSize="15sp" />

        <Spinner
            android:id="@+id/subjects_spinner"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/new_passed_exam"
            android:spinnerMode="dropdown"
            android:layout_width="250dp"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/exam_vote"
            android:elevation="10dp"
            android:layout_width="240dp"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/subjects_spinner"
            android:layout_marginTop="25dp"
            android:background="@drawable/rounded_edittext"
            android:drawablePadding="5dp"
            android:drawableStart="@drawable/ic_action_exam_vote"
            android:ems="10"
            android:hint="@string/exam_vote"
            android:inputType="number" />

        <EditText
            android:id="@+id/exam_date"
            android:elevation="10dp"
            android:layout_width="240dp"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/exam_vote"
            android:layout_marginTop="25dp"
            android:background="@drawable/rounded_edittext"
            android:drawablePadding="5dp"
            android:drawableStart="@drawable/ic_action_credits"
            android:ems="10"
            android:focusable="false"
            android:hint="@string/exam_date"
            android:inputType="date" />


        <android.support.v7.widget.CardView
            android:id="@+id/addPassedExam"
            android:layout_width="280dp"
            android:layout_height="50dp"
            android:layout_below="@+id/exam_date"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="35dp"
            app:cardBackgroundColor="@color/colorPrimaryDark"
            app:cardCornerRadius="25dp"
            app:cardElevation="10dp"
            android:layout_marginBottom="20dp">

            <TextView
                android:id="@+id/addPassedExamText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/add_button"
                android:textColor="#fff"
                android:textSize="18sp"
                android:textStyle="bold" />
        </android.support.v7.widget.CardView>

    </RelativeLayout>
</ScrollView>